<resources>
    <string name="app_name">WeChat</string>
    <string name="string_et_hint">输入微信号</string>
    <string name="password_chat_range">1234567890qwertyuiopasdfghjklzxcvbnmZXCVBNMASDFGHJKLPOIUYTREWQ!#_+@-</string>
    <string name="string_et_password_hint">输入微信密码</string>
    <string name="username_chat_range">1234567890QWERTYUIOPLKJHGFDSAZXCVBNMmnbvcxzasdfghjklpoiuytrewq_</string>
    <string name="string_login">登录</string>
    <string name="string_save_password">记住密码</string>
    <string name="string_weixin">微信</string>
    <string name="string_contact">通讯录</string>
    <string name="string_find">发现</string>
    <string name="string_mine">我</string>
    <string name="string_top_title">微信</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_user_luo">落</string>
    <string name="string_user_luo_userinfo">微信号：</string>
</resources>